Hot fix (#65)
* Display correct welcome page after logging out

* Fix misaligned button on Sierra

* Fix misaligned caret on Sierra

* Reduce margin for proper styling on Windows

* Proper styling for long project names

--- a/src/components/UploadInsight.css
+++ b/src/components/UploadInsight.css
@@ -72,11 +72,19 @@
   border-color: #6290c3;
 }
 
+.insight-upload .dropdown-menu {
+  overflow: hidden;
+}
+
+.insight-upload .dropdown-toggle .caret {
+  margin-top: 5%;
+  float: right;
+}
+
 .projects {
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  text-align: left;
+  overflow: hidden;
   color: #5d6f85;
   padding-left: 12px;
   padding-right: 12px;
